ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-webapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: node-webapp
            port:
              name: http
    host: node-webapp.poi-cta.azuretest.xyz
  tls:
  - hosts:
    - node-webapp.poi-cta.azuretest.xyz
    secretName: node-webapp.poi-cta.azuretest.xyz
